<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcHistorico"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num1"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num1"
                android:id="@+id/num1"
                android:inputType="numberDecimal"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:onClick="Somar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_marginTop="15dp"
                />
            <Button
                android:onClick="Multiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:onClick="Dmininuir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_marginTop="15dp"
                />
            <Button
                android:onClick="Dividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/" />


        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num2"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num2"
                android:id="@+id/num2" />

        </LinearLayout>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNomeAluno"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMedia"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSituacao"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#E9E9E9"
        android:id="@+id/layoutResultado"
        ></LinearLayout>

</LinearLayout>